# cw-templates

./: Cargo.toml  README.md
src/: contract.rs  error.rs  msg.rs  state.rs
