[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.5.0"
thiserror = { version = "1.0.56" }
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"
cosmwasm-schema = { version = "1.1.0" }
